--- a/src/main/resources/templates/missions.html
+++ b/src/main/resources/templates/missions.html
@@ -32,43 +32,15 @@
                     <td th:text="${m.missionType}"></td>
                     <td th:text="${m.status}"></td>
                     <td th:text="${m.requiredVolunteerNumber}"></td>
-                    <td th:each="c : ${m.completionDates}">
-                        <div th:text="${#temporals.format(c.startingDate, 'dd-MM-yyyy HH:mm')}"></div>
-                    </td>
-                    <td th:each="c : ${m.completionDates}">
-                        <div th:text="${c.endingDate}"></div>
-                    </td>
+                    <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
+                    <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
+
                 </tr>
                 </thead>
             </table>
         </div>
     </div>
 </div>
-
-<div th:class="p-3">
-    <div th:class="card">
-        <div th:class="card-header">
-            Liste dates de réalisation
-        </div>
-        <div th:class="card-body">
-            <table th:class="table">
-                <thead>
-                <tr>
-                    <th>ID</th> <th>Date de début</th> <th>Date de fin</th>
-                </tr>
-                <tr th:each="c:${listCompletionDates}">
-                    <td th:text="${c.id}"></td>
-                    <td th:text="${#temporals.format(c.startingDate, 'dd-MM-yyyy HH:mm')}"></td>
-                    <td th:text="${c.endingDate}"></td>
-                </tr>
-                </thead>
-            </table>
-        </div>
-    </div>
-</div>
-
-
-
 
     <script src="/webjars/popper.js/2.11.7/umd/popper.min.js"></script>
     <script src="/webjars/bootstrap/5.3.2/js/bootstrap.min.js"></script>
