--- a/src/main/resources/templates/missions.html
+++ b/src/main/resources/templates/missions.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<!--<div th:class="p-3">
+<<div th:class="p-3">
     <div th:class="card">
         <div th:class="card-header">
             Liste missions
@@ -40,19 +40,20 @@
             </table>
         </div>
     </div>
-</div>-->
+</div>
 <div class="p-4">
 
 
 </div>
-<div class="container">
+
+<!--<div class="container-fluid">
     <h1 class="mt-4">Créer une Mission</h1>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createMissionModal">
         Créer une Mission
     </button>
-</div>
+</div>-->
 <!-- Modal pour créer une mission -->
-<div class="modal fade" id="createMissionModal" tabindex="-1" aria-labelledby="createMissionModalLabel" style="display: none;" aria-hidden="true">
+<!--<div class="modal fade" id="createMissionModal" tabindex="-1" aria-labelledby="createMissionModalLabel" style="display: none;" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -111,7 +112,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 
 
