--- a/src/main/resources/templates/missions.html
+++ b/src/main/resources/templates/missions.html
@@ -21,67 +21,18 @@
         </nav>
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div class="col-12 bg-light">
+            <div class="col">
 
-                <h1>Missions</h1>
-                <button type="button" class="btn btn-primary m-2" data-bs-toggle="modal" data-bs-target="#createMissionModal">
+                <h1 class="py-2">Missions</h1>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createMissionModal">
                     Créer une Mission
                 </button>
                 <!-- Modal pour créer une mission -->
-                <div class="modal fade" id="createMissionModal" tabindex="-1" aria-labelledby="createMissionModalLabel" style="display: none;" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="createMissionModalLabel">Créer une Mission</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form th:action="@{/createMission}" th:method="post" id="missionForm" th:object="${missionDTO}">
-                                    <div class="form-group">
-                                        <label for="name" class="col-form-label">Nom de la Mission :</label>
-                                        <input th:field="*{name}" type="text" id="name" class="form-control" required="required">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="description" class="col-form-label">Description :</label>
-                                        <textarea th:field="*{description}" id="description" class="form-control" rows="4"></textarea>
-                                    </div>
+                <div th:replace="fragments/createMissionModal :: createMissionModal"></div>
 
-                                    <div class="form-group">
-                                        <label for="comment" class="col-form-label">Commentaire :</label>
-                                        <textarea th:field="*{comment}" id="comment" class="form-control" rows="4"></textarea>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="missionType" class="col-form-label">Type de Mission :</label>
-                                        <input th:field="*{missionType}" type="text" id="missionType" class="form-control">
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="requiredVolunteerNumber" class="col-form-label">Nombre de Bénévoles Requis:</label>
-                                        <input th:field="*{requiredVolunteerNumber}" type="number" id="requiredVolunteerNumber" class="form-control" required="required">
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="startingDate" class="col-form-label">Date de Début:</label>
-                                        <input th:field="*{startingDate}" type="datetime-local" id="startingDate" class="form-control">
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="endingDate" class="col-form-label">Date de Fin:</label>
-                                        <input th:field="*{endingDate}" type="datetime-local" id="endingDate" class="form-control">
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-                                <button type="submit" form="missionForm" class="btn btn-primary">Créer</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Zone principale -->
             </div>
-            <div class="col-md-6 offset-3">
+            <!-- Zone principale -->
+            <div class="col-md-10 offset-1 py-2">
                 <div class="card">
                     <div class="card-header">
                         <form class="d-flex" role="search" th:action="@{missions}">
@@ -95,6 +46,8 @@
                         <table th:class="table">
                             <thead>
                             <tr>
+                                <th>ID</th>
+                                <th>uuid</th>
                                 <th>Nom</th>
                                 <th>Type</th>
                                 <th>Statut</th>
@@ -103,16 +56,56 @@
                                 <th>Actions</th>
                             </tr>
                             <tr th:each="m:${listMissions}">
+                                <td th:text="${m.id}"></td>
+                                <td th:text="${m.uuid}"></td>
                                 <td th:text="${m.name}"></td>
                                 <td th:text="${m.missionType}"></td>
                                 <td th:text="${m.status}"></td>
                                 <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
                                 <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
                                 <td>
-                                    <button class="btn btn-success btn-sm"><i class="bi bi-eye"></i></button>
-                                    <button class="btn btn-primary btn-sm"><i class="bi bi-pencil-square"></i></button>
-                                    <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
+
+
+                                    <!-- Le bouton "Voir" dans la colonne "Actions" de la table -->
+                                    <a class="btn btn-primary btn-sm" th:href="@{'/missions/view/' + ${m.id}}" data-bs-toggle="modal" data-bs-target="#missionModal">Voir</a>
+
+                                    <!-- Modal pour afficher les détails de la mission -->
+                                    <div class="modal fade" id="missionModal" tabindex="-1" aria-labelledby="missionModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="missionModalLabel">Détails de la Mission</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>ID : <span th:text="${m.id}"></span></p>
+                                                    <p>Nom : <span th:text="${m.name}"></span></p>
+                                                    <p>UUID : <span th:text="${m.uuid}"></span></p>
+                                                    <!-- Ajoutez d'autres détails ici -->
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
                                 </td>
+
+
+
+                                <!--<td>
+                                    <button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#showMissionModal" th:attrappend="data-bs-target=${m.uuid}"><i class="bi bi-eye"></i></button>
+                                    --><!-- Modal pour voir une mission --><!--
+                                    <div th:replace="fragments/viewMissionModal :: viewMissionModal"></div>
+
+                                    <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editMissionModal"><i class="bi bi-pencil-square"></i></button>
+                                    --><!-- Modal pour éditer une mission --><!--
+
+
+                                    <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
+                                </td>-->
                             </tr>
                             </thead>
                         </table>
@@ -139,6 +132,7 @@
         </main>
     </div>
 </div>
+
 
 
 
