--- a/src/main/resources/templates/missions/edit_mission.html
+++ b/src/main/resources/templates/missions/edit_mission.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title><!DOCTYPE html>
-        <html lang="en" xmlns:th="http://www.thymeleaf.org">
-        <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
+    <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -15,17 +11,15 @@
 
 </head>
 <body>
-
-
-<div th:fragment="editMissionModal" class="modal fade" id="editMissionModal" th:attrappend="id=${m.uuid}" tabindex="-1" aria-labelledby="editMissionModalLabel" style="display: none;" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="editMissionModalLabel">Modifier la mission</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+<div class="container">
+    <div class="row">
+        <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
+            <div class="card-header">
+                <h1>Mise à jour</h1>
             </div>
-            <div class="modal-body">
-                <form th:action="@{/updateMission}" th:method="put" id="missionForm" th:object="${m}">
+            <div class="card-body">
+                <form th:action="@{/missions/update}" method="post" id="editMissionForm" th:object="${mission}">
+                    <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
                     <div class="form-group">
                         <label for="name" class="col-form-label">Nom de la Mission :</label>
                         <input th:field="*{name}" type="text" id="name" class="form-control" required="required">
@@ -42,7 +36,7 @@
 
                     <div class="form-group">
                         <label for="missionType" class="col-form-label">Type de Mission :</label>
-                        <input th:field="*{missionType}" th:value="" type="text" id="missionType" class="form-control">
+                        <input th:field="*{missionType}" type="text" id="missionType" class="form-control">
                     </div>
 
                     <div class="form-group">
@@ -61,20 +55,17 @@
                     </div>
                 </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-                <button type="submit" form="missionForm" class="btn btn-primary">Mettre à jour</button>
+            <div class="card-footer">
+                <button type="submit" form="editMissionForm" class="btn btn-primary">Mettre à jour</button>
             </div>
         </div>
     </div>
 </div>
 
+
+
 <script src="/webjars/popper.js/2.11.7/umd/popper.min.js"></script>
 <script src="/webjars/bootstrap/5.3.2/js/bootstrap.min.js"></script>
-</body>
-</html></title>
-</head>
-<body>
 
 </body>
 </html>
