--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,17 +3,36 @@
 <div th:replace="~{fragments/head :: head}"></div>
 <body>
 
-
-
     <div class="container-fluid overflow-hidden">
         <div class="row vh-100 overflow-auto">
             <div th:replace="~{fragments/sidebar :: sidebar}"></div>
             <div class="col d-flex flex-column h-sm-100 col-sm-9">
-                <main class="row overflow-auto">
+                <main class="row overflow-auto ">
                     <div class="col pt-4">
                         <h1 class="py-2">Accueil</h1>
                         <hr />
-                        <h1 class="py-2">Accueil</h1>
+                        <div class="table-responsive">
+                            <table id="allMissions" class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>uuid</th>
+                                    <th>Nom</th>
+                                    <th>Type</th>
+                                    <th>Statut</th>
+                                    <th>Date de début</th>
+                                    <th>Date de fin</th>
+                                </tr>
+                                <tr th:each="m:${missions}">
+                                    <td th:text="${m.uuid}"></td>
+                                    <td th:text="${m.name}"></td>
+                                    <td th:text="${m.missionType}"></td>
+                                    <td th:text="${m.status}"></td>
+                                    <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
+                                    <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
+                                </tr>
+                                </thead>
+                            </table>
+                        </div>
                     </div>
                 </main>
                 <div th:replace="~{fragments/footer :: footer}"></div>
@@ -22,8 +41,7 @@
     </div>
 
 
-    <script src="/webjars/popper.js/2.11.7/umd/popper.min.js"></script>
-    <script src="/webjars/bootstrap/5.3.2/js/bootstrap.min.js"></script>
+    <div th:replace="~{fragments/scripts :: scripts}"></div>
 
 </body>
 </html>
