--- a/src/main/resources/templates/missions/create_mission.html
+++ b/src/main/resources/templates/missions/create_mission.html
@@ -54,8 +54,7 @@
 
 
 
-<script src="/webjars/popper.js/2.11.7/umd/popper.min.js"></script>
-<script src="/webjars/bootstrap/5.3.2/js/bootstrap.min.js"></script>
+    <div th:replace="~{fragments/scripts :: scripts}"></div>
 
 </body>
 </html>
