--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -24,7 +24,7 @@
                     <i class="fs-5 bi-bullseye"></i><span class="ms-1 d-none d-sm-inline">Missions</span></a>
             </li>
             <li>
-                <a href="#" class="nav-link px-sm-0 px-2">
+                <a th:href="@{/volunteers}" class="nav-link px-sm-0 px-2">
                     <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Bénévoles</span> </a>
             </li>
             <!--<li class="dropdown">
